--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.8.0/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js" crossorigin="anonymous"
     referrerpolicy="no-referrer"></script>
-  <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js'></script>
-  <link href='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css' rel='stylesheet' /> -->
   <script src="https://unpkg.com/d3-geo-voronoi@1"></script>
   <link rel="icon" type="image/png" href="img/path2.png">
 </head>
@@ -33,6 +31,171 @@
       <h2>Zdroje</h2>
     </div>
     <div id="peace_content">
+      <p id="content_paragraph">
+        Zleteli orly z Tatry, tiahnu na podolia,
+        ponad vysoké hory, ponad rovné polia;
+        preleteli cez Dunaj, cez tú šíru vodu,
+        sadli tam za pomedzím slovenského rodu.
+
+        Duní Dunaj a luna za lunou sa valí:
+        nad ním svieti pevný hrad na vysokom bralí.
+        Pod tým hradom Riman—cár zastal si táborom:
+        belia sa rady šiatrov ďalekým priestorom.
+        Pokraj táboru sedí cár na zlatom stolci;
+        okol neho cárska stráž, tuhí to paholci;
+        a pred cárom družina neveliká stojí:
+        sú to cudzí víťazi, každý v jasnej zbroji.
+        Pobelavé kaderie šije im obtáča,
+        modré ich oči bystro v okolo si páča.
+        Rastom sú ako jedle, pevní ako skala,
+        zdalo by sa ti, že ich jedna mater mala.
+        Krásna zem — jej končiny valný Dunaj vlaží,
+        a Tatra skalnou hradbou okol nej sa väží:
+        Tá zem, tie pyšné hory, tie žírne moravy:
+        to vlasť ich, to kolíska dávna synov slávy.
+        Slovenský rod ich poslal, zo slávneho snemu,
+        aby išli s pozdravom k cárovi rímskemu.
+        Oni čelom nebijú, do nôh nepadajú:
+        taká otroč neznáma slovenskému kraju,
+        lež božie dary nesú, chlieb a soľ, cárovi
+        a smelými sa jemu primlúvajú slovy:
+        „Národ slovenský, kňazstvo i staršina naša,
+        kroz nás ti, slávny cáre! svoj pozdrav prináša.
+        Zem tá, na ktorú kročiť mieni tvoja noha,
+        to je zem naša, daná Slovänom od Boha.
+        Pozri: tu jej končiny valný Dunaj vlaží,
+        tam Tatra skalnou hradbou okol nej sa väží.
+        A zem to požehnaná! Chvála Bohu z neba,
+        máme pri vernej práci voždy svoj kus chleba.
+        Zvyk náš je nie napadať cudzie vlasti zbojom:
+        Slovän na svojom seje, i žne len na svojom,
+        cudzie nežiada. Ale keď na naše dvere
+        zaklope ruka cudzia v úprimnej dôvere:
+        kto je, ten je; či je on zblíza, či zďaleka:
+        Vo dne, v noci na stole dar boží ho čaká.
+        Pravda, bohy vydaná, káže nám Slovänom:
+        pána mať je neprávosť a väčšia byť pánom.
+        A človek nad človeka u nás nemá práva:
+        sväté naše heslo je: Sloboda a sláva! —
+        Neraz krásnu vlasť našu vrah napadol divý:
+        na púšť obrátili sa bujné naše nivy;
+        mestá ľahli popolom: a ľud náš úbohý,
+        bitý biedami, cudzím dostal sa pod nohy.
+        Bláhal už víťaz pyšný, že si bude pásti
+        vôľu svoju naveky po slovänskej vlasti,
+        a žiť z našich mozoľov: ale bláhal darmo!
+        Dal nám Boh zas dobrý deň, zlomili sme jarmo.
+        A tí, krutým železom čo nad nami vládli,
+        kdeže sú? — My stojíme; ale oni padli. —
+        Lebo — veky to svedčia — vo knihách osudu
+        tak stojí napísané o slovänskom ľudu:
+        Zem, ktorú v údel dali Slovänom nebesá,
+        tá zem hrobom každému vrahovi stane sa. —
+        Nuž, povedzže nám, cáre! mocná ruka tvoja
+        čože nám nesie: či meč, či vetvu pokoja?
+        S mečom ak ideš: cáre! meče máme i my,
+        a poznáš, že narábať dobre vieme s nimi;
+        ak s pokojom: pozdrav ťa pán neba i zeme,
+        lepšie, ako ťa my tu pozdraviť umieme. —
+        Tieto dary božie sú priazne našej znaky;
+        z ďaky ti ich dávame: ber ich aj ty z ďaky.“
+        Nevzal cár božie dary, z jeho mračnej tvári
+        urazená sa pýcha ľútnym hnevom žiari.
+        A zo stolca zlatého takovým sa heslom
+        ozvali ústa jeho ku slovänským poslom:
+        „Mocný pán, ktorému boh celú zem podnožil
+        a osudy národov v ruku jeho vložil:
+        ten pán velí: Slovänia! pozrite po svete:
+        medzi národy jeho či jeden nájdete,
+        Nuž, povedzže nám, cáre! mocná ruka tvoja
+        čože nám nesie: či meč, či vetvu pokoja?
+        S mečom ak ideš: cáre! meče máme i my,
+        a poznáš, že narábať dobre vieme s nimi;
+        ak s pokojom: pozdrav ťa pán neba i zeme,
+        lepšie, ako ťa my tu pozdraviť umieme. —
+        Tieto dary božie sú priazne našej znaky;
+        z ďaky ti ich dávame: ber ich aj ty z ďaky.“
+        Nevzal cár božie dary, z jeho mračnej tvári
+        urazená sa pýcha ľútnym hnevom žiari.
+        A zo stolca zlatého takovým sa heslom
+        ozvali ústa jeho ku slovänským poslom:
+        „Mocný pán, ktorému boh celú zem podnožil
+        a osudy národov v ruku jeho vložil:
+        ten pán velí: Slovänia! pozrite po svete:
+        medzi národy jeho či jeden nájdete,
+        ktorý by putá minul abo nezahynul,
+        akže oproti Rímu prápor svoj rozvinul.
+        Skloníte šije i vy. — Tie krásne roviny,
+        túto zem vašich dedov dostane ľud iný.
+        A spurné rody vaše pôjdu Rímu slúžiť,
+        strážiť nám naše stáda, polia naše plúžiť.
+        A junač vašu k mojim junákom pripojím,
+        a z nej krajinám rímskym obranu pristrojím.
+        A kto sa proti mojim rozkazom postaví,
+        beda mu! ten sám sebe záhubu pripraví.
+        Vedzte, že som pán Rímu, a Rím je pán svetu:
+        To moja cárska vôľa; to vám na odvetu.“
+
+        Hriema pyšný cár, hriema zo stolca zlatého,
+        lenže Slovän nejde sa ľakať pýchy jeho.
+        Hoj, rozovrela tá krv slovänská divoko,
+        a junák ti cárovi pozrel okom v oko;
+        a z oka ti mu božia zablysla sa strela,
+        ruka sa napružila a na zbroj udrela;
+        a jedným veľkým citom srdcia im zahrali;
+        a jeden strašný ohlas ústa im vydali:
+        „Mor ho!“ kríkla družina slovänská odrazu
+        a meč zasvietil v pästi každému víťazu:
+        „Mor ho!“ kríkla a razom na cára sa metá:
+        To ti na rímsku pýchu slovänská odveta.
+        No, dokáž teraz, či máš toľko sily v meči,
+        koľko pýchy vo tvojej, cáre, bolo reči. —
+        Ale ten nie! — zbroje sa bojí podlá duša:
+        a tu ti o slobodu dobrý ľud pokúša. —
+        Skočil medzi stráž svoju cár bledý od strachu:
+        a zlatý jeho stolec už sa váľa v prachu;
+        a mečom za ním Slovän cestu si preráža
+        a junák za junákom padá cárska stráža.
+
+        Zasurmili surmity, volajú do zbroje:
+        povstal tábor, do šíkov zvíjajú sa voje;
+        a voj za vojom divým útokom ta letí,
+        kde boj na cára bijú tie slovänské deti.
+        Husté prachu kúdoly po poli valia sa,
+        zem dupotom a nebo rykom sa otriasa. —
+        A tá naša rodinka, tá slovänská čata,
+        už vám je zôkol—vôkol od vrahov obstatá.
+        Sto mečov sa každému nado hlavou blyští,
+        lež Slovän nečítava vrahov na bojišti,
+        ale morí. — Hoj, mor ho! detvo môjho rodu,
+        kto kradmou rukou siahne na tvoju slobodu:
+        a čo i tam dušu dáš v tom boji divokom:
+        Mor ty len, a voľ nebyť, ako byť otrokom.
+
+        Zúri boj a našina stala si dokola:
+        to vie, že premoc rímsku jej moc nepredolá:
+        lež, brať moja, ak už len padnúť mi máš v boji,
+        to že mi padni, ako víťazom pristojí.
+
+        A môj Slovän ešte raz bystré hodil zraky
+        ponad tie šíre rovne, na kraj svoj ďaleký.
+        Tam na tých horách sivé mihajú sa väže,
+        čo strežú slovenského národa čierťaže.
+        Svätoháj, stovekými zelený lipami,
+        v tajné tam lono túli bohov jeho chrámy.
+        A nad riekou biely dom, v ňom jeho rod milý,
+        a v čistom poli dedov posvätné mohyly:
+        dedov, ktorých niekdy ľud radievali rady,
+        ktorých meč divých vrahov odrážal nápady.
+        Ich popoly dávno už čierna zem tam kryje,
+        ale ich meno posiaľ v piesni ľudu žije.
+        A sláva zašlých vekov junáka oviala;
+        a duša jeho svätým ohňom splápolala,
+        a meč v jeho pravici strašnejšie sa zvíja;
+        bleskom blýska na vraha, hromom ho zabíja.
+        Praštia zlomené raty, bité štíty zvonia
+        a pyšné prilby rímske do prachu sa ronia.
+      </p>
     </div>
   </div>
 
