--- a/index.html
+++ b/index.html
@@ -33,18 +33,27 @@
     <div id="peace_content">
       <p id="content_paragraph">
         <b>Volebné Dáta 1979 - 2019:</b></br>
-        <a target="_blank" href="https://results.elections.europa.eu/en/tools/download-datasheets/">results.elections.europa.eu</a></br></br>
+        <a target="_blank"
+          href="https://results.elections.europa.eu/en/tools/download-datasheets/">results.elections.europa.eu</a></br></br>
         <b>Vývoj Volebnej Účasti:</b></br>
-        <a target="_blank" href="https://www.tandfonline.com/doi/pdf/10.1080/23745118.2022.2137918">tandfonline.com</a></br>
+        <a target="_blank"
+          href="https://www.tandfonline.com/doi/pdf/10.1080/23745118.2022.2137918">tandfonline.com</a></br>
         <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10170566/">ncbi.nlm.nih.gov</a></br>
-        <a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0261379401000543">sciencedirect.com</a></br></br>
+        <a target="_blank"
+          href="https://www.sciencedirect.com/science/article/pii/S0261379401000543">sciencedirect.com</a></br></br>
         <b>História EÚ 1945 - 2024:</b></br>
-        <a target="_blank" href="https://www.europarl.europa.eu/factsheets/sk/sheet/167/rozsirovanie-unie">europarl.europa.eu</a></br>
-        <a target="_blank" href="https://european-union.europa.eu/principles-countries-history/history-eu_sk">european-union.europa.eu</a></br></br>
+        <a target="_blank"
+          href="https://www.europarl.europa.eu/factsheets/sk/sheet/167/rozsirovanie-unie">europarl.europa.eu</a></br>
+        <a target="_blank"
+          href="https://www.europeana.eu/en">europeana.eu</a></br>
+        <a target="_blank"
+          href="https://european-union.europa.eu/principles-countries-history/history-eu_sk">european-union.europa.eu</a></br></br>
         <b>Výdavky a príjmy EÚ:</b></br>
-        <a target="_blank" href="https://commission.europa.eu/strategy-and-policy/eu-budget/long-term-eu-budget/2014-2020/spending-and-revenue_en">commission.europa.eu</a></br></br>
+        <a target="_blank"
+          href="https://commission.europa.eu/strategy-and-policy/eu-budget/long-term-eu-budget/2014-2020/spending-and-revenue_en">commission.europa.eu</a></br></br>
         <b>Voľnosť Cestovania v EÚ:</b></br>
-        <a target="_blank" href="https://commission.europa.eu/strategy-and-policy/policies/justice-and-fundamental-rights/eu-citizenship-and-democracy/free-movement-and-residence_en#:~:text=Digital%20COVID%20Certificate-,The%20right%20to%20free%20movement,EU%20Charter%20of%20Fundamental%20Rights.">commission.europa.eu</a></br></br>
+        <a target="_blank"
+          href="https://commission.europa.eu/strategy-and-policy/policies/justice-and-fundamental-rights/eu-citizenship-and-democracy/free-movement-and-residence_en#:~:text=Digital%20COVID%20Certificate-,The%20right%20to%20free%20movement,EU%20Charter%20of%20Fundamental%20Rights.">commission.europa.eu</a></br></br>
         <b>Geografické Dáta (GeoJSON):</b></br>
         <a target="_blank" href="https://github.com/leakyMirror/map-of-europe/tree/master">github.com</a></br></br>
         <b>Vizualizácie Software:</b></br>
@@ -58,10 +67,13 @@
     <div id="timeline"></div>
     <div id="separator" class="overview">
       <div id="ch1_div">
-        Vznik Európskej únie sa datuje do povojnových rokov.<br>
-        Po skončení druhej svetovej vojny sa na kontinente<br>
-        začali objavovať nové myšlienky a iniciatívy<br>
-        zamerané na spoluprácu a pokojný rozvoj.<br><br><br>A ako sa to vyvíjalo?
+        <img id="title_image" src="img/flag.png" alt="PeaceRep Logo" /></br></br>
+        Európska Únia je viac než len ekonomický zväzok.</br>
+        Je to symbool solidarity, spolupráce a mieru.</br>
+        Od jej vzniku počas povojnovej obnovy až po dnešné dni</br>
+        nám EÚ poskytuje platformu na zdieľanie hodnôt,</br>
+        spoločných cieľov a posilňovanie demokracie.
+        <br><br><br>A ako sa to vyvíjalo?
       </div>
     </div>
 
@@ -86,38 +98,36 @@
 
       <div class="graphic__prose">
         <div class="trigger one" data-step="0">
-          <p id="paragraph1">Po prejave <a href="https://sk.wikipedia.org/wiki/Robert_Schuman" target="_blank">Roberta
-              Schumana</a>,
-            francúzskeho ministra zahraničných vecí, podpísalo šesť
-            krajín zmluvu o spoločnom riadení uhoľného a
-            oceliarskeho priemyslu.</br>
+          <p id="paragraph1"><a href="https://sk.wikipedia.org/wiki/Robert_Schuman" target="_blank">Robert
+            Schuman</a> (1886-1963), považovaný za zakladateľa myšlienky Európskej Únie, zohral kĺúčovú úlohu 
+            pri podpise zmluvy, ktorá mala zabezpečiť aby sa zverstvá druhej svetovej vojny v Európe už 
+            neopakovali.</br>
             <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button>
           </p>
-          <p id="paragraph2" class="additional-content hidden">Týmto chceli zabezpečiť,
-            aby nemohla žiadna krajina obrátiť svoje vojnové zbrane proti inej.
+          <p id="paragraph2" class="additional-content hidden"><a target="_blank" href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-paris">Zmluva</a> o riadení uhoľného a oceliarskeho 
+            priemyslu mala zabezpečiť, aby nemohla žiadna krajina obrátiť svoje zbrane proti inej.
             Týmito šiestimi krajinami boli Nemecko, Francúzsko, Taliansko,
-            Holandsko, Belgicko a Luxembursko. Európske spoločenstvo uhlia a
-            ocele začalo fungovať od roku 1952.</br></p>
+            Holandsko, Belgicko a Luxembursko.</br></p>
         </div>
         <div class="one_half">
           <p id="paragraph15">Nadväzujúc na úspech Zmluvy o založení Európskeho spoločenstva
-            uhlia a ocele rozširuje 6 zakladajúcich krajín svoju spoluprácu na ďalšie
+            uhlia a ocele rozširuje 6 zakladajúcich krajín spoluprácu o ďalšie
             hospodárske odvetvia.</br><button id="more_info"
               onclick="toggleContent('one_half', 'paragraph15', 'paragraph25')">viac</button>
           </p>
-          <p id="paragraph25" class="additional-content hidden">Formalizujú to podpisom dvoch zmlúv, ktorými sa zakladá
-            Európske hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre
-            atómovú energiu (Euratom). Tieto orgány začali fungovať 1. januára 1958.</p>
+          <p id="paragraph25" class="additional-content hidden">Formalizujú to podpisom dvoch zmlúv, 
+            ktorými sa zakladá <a target="_blank" href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-rome">Európske hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre
+            atómovú energiu (Euratom)</a>.</p>
         </div>
         <div class="trigger two" data-step="1">
-          <p>K šiestim zakladajúcim krajinám sa pridávajú Dánsko,
-            Írsko a Spojené Kraľovstvo.
+          <p>16 rokov po vzniku Európskeho Spoločenstva sa k šiestim zakladajúcim krajinám 
+            pridávajú Dánsko, Írsko a Spojené Kraľovstvo.
           </p>
         </div>
         <div class="trigger three" data-step="2">
           <p id="paragraph3">
-            Občania si prvýkrát priamo volia poslancov
-            Európskeho parlamentu. Dovtedy menovali poslancov
+            Občania si prvýkrát zvolili <a target="_blank" href="https://multimedia.europarl.europa.eu/en/topic/40-years-ago-first-session-of-the-directly-elected-european-parliament_12503">poslancov
+            Európskeho parlamentu</a>. Dovtedy menovali poslancov
             národné parlamenty.</br><button id="more_info"
               onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
           </p>
@@ -129,8 +139,8 @@
           <p id="paragraph5">
             K deviatim krajinám Európskeho spoločenstva sa v roku
             1981 pridalo Grécko, ktoré splnilo kritéria
-            keď sedem rokov pred tým zvrhlo vojenský režim a
-            obnovilo demokraciu.</br><button id="more_info"
+            keď sedem rokov pred tým zvrhlo <a target="_blank" href="https://www.europeana.eu/en/exhibitions/mass-media-and-propaganda-in-20th-century-europe/the-colonels-of-greece">vojenský režim</a> a
+            obnovilo <a target="_blank" href="http://news.bbc.co.uk/onthisday/hi/dates/stories/july/23/newsid_2515000/2515819.stm">demokraciu</a>.</br><button id="more_info"
               onclick="toggleContent('four', 'paragraph5', 'paragraph6')">viac</button>
           </p>
           <p id="paragraph6" class="additional-content hidden">
@@ -141,28 +151,29 @@
         </div>
         <div class="trigger five" data-step="4">
           <p>
-            V deiatich krajinách Európy sa konajú už druhé priame voľby do
+            V desiatich krajinách Európy sa konajú už druhé voľby do
             Európskeho parlamentu. Svojich zástupcov a zástupkyne volí aj Grécko,
             s celkovou účasťou 80.59%.
           </p>
         </div>
         <div class="trigger six" data-step="5">
           <p>
-            Portugalsko a Španielsko upevňujú demokraciu a pristupujú do EHS.
+            Portugalsko a Španielsko zavŕšujú tzv. Stredomorské rozšírenie EÚ keď, podobne ako Grécko,
+            <a target="_blank" href="https://multimedia.europarl.europa.eu/en/video/history-the-mediterranean-enlargement-19811986_V001-0014">zavrhujú diktatúty</a> a volia si demokraciu. 
             Budúcu Európsku úniu tak tvorí už 12 štátov v Európe.
           </p>
         </div>
         <div class="trigger seven" data-step="6">
           <p id="paragraph9">
-            Okrem protikomunistiských revolúcií v satelitoch
-            Sovietskeho Zväzu, ktoré vedú k pádu Železnej Opony sa v roku
-            1989 konajú ďalšie voľby do Európskeho Parlementu.</br>
+            Demokracia a sloboda si začínajú hľadať miesto aj v satelitoch
+            Sovietskeho Zväzu čo vedie k pádu Železnej Opony. Na druhej strane 
+            Európy sa v roku 1989 konajú už tretie EuroVoľby.</br>
             <button id="more_info" onclick="toggleContent('seven', 'paragraph9', 'paragraph10')">viac</button>
           </p>
           <p id="paragraph10" class="additional-content hidden">
-            V novembri 1989 vypukla v Československu tzv. Nežná revolúcia, ktorá priniesla pád
-            komunistického režimu. Slovensko sa aktívne zapojilo do udalostí,
-            ktoré vyvrcholili nástupom demokracie a zrušením jednej straníckej vlády.</br>
+            Vtedajšie Československo sa vtedy aktívne zapojilo do boja za slobodu a demokraciu v Európe
+            keď v novembri 1989 vypulka Nežná revolúcia, ktorá priniesla pád
+            komunistického režimu. </br>
           </p>
         </div>
         <div class="trigger seven_half" data-step="7">
