--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <a target="_blank"
           href="https://www.europarl.europa.eu/factsheets/sk/sheet/167/rozsirovanie-unie">europarl.europa.eu</a></br>
         <a target="_blank"
-          href="https://www.europeana.eu/en">europeana.eu</a></br>
+          href="https://www.eui.eu/en/academic-units/historical-archives-of-the-european-union">eui.eu</a></br>
+        <a target="_blank" href="https://www.europeana.eu/en">europeana.eu</a></br>
         <a target="_blank"
           href="https://european-union.europa.eu/principles-countries-history/history-eu_sk">european-union.europa.eu</a></br></br>
         <b>Výdavky a príjmy EÚ:</b></br>
@@ -69,11 +70,11 @@
       <div id="ch1_div">
         <img id="title_image" src="img/flag.png" alt="PeaceRep Logo" /></br></br>
         Európska Únia je viac než len ekonomický zväzok.</br>
-        Je to symbool solidarity, spolupráce a mieru.</br>
-        Od jej vzniku počas povojnovej obnovy až po dnešné dni</br>
-        nám EÚ poskytuje platformu na zdieľanie hodnôt,</br>
-        spoločných cieľov a posilňovanie demokracie.
-        <br><br><br>A ako sa to vyvíjalo?
+        Je symbolom solidarity, spolupráce a mieru. Od jej </br>
+        vzniku, keď sa Európa spamätávala z druhej svetovej vojny,</br>
+        nám EÚ poskytuje miesto na zdieľanie slobody, demokracie</br>
+        a spájania sa v našej rozmanitosti.
+        <!-- <br><br><br>A ako sa to vyvíjalo? -->
       </div>
     </div>
 
@@ -81,13 +82,13 @@
       <div class="graphic__vis">
         <div id="details"></div>
         <div id="ind_line"></div>
+        <div id="perm2"></div>
         <div id="perm">
           <h4 style="margin: 0px;">Legenda</h4>
           Čím jasnejšia farba, tým</br>
           väčšia účasť na EuroVoľbách.</br>
           Prejdi myšou nad krajinu.
         </div>
-        <div id="perm2"></div>
         <svg id="visualization">
           <g id="voronoi"></g>
           <g id="basemap"></g>
@@ -99,12 +100,14 @@
       <div class="graphic__prose">
         <div class="trigger one" data-step="0">
           <p id="paragraph1"><a href="https://sk.wikipedia.org/wiki/Robert_Schuman" target="_blank">Robert
-            Schuman</a> (1886-1963), považovaný za zakladateľa myšlienky Európskej Únie, zohral kĺúčovú úlohu 
-            pri podpise zmluvy, ktorá mala zabezpečiť aby sa zverstvá druhej svetovej vojny v Európe už 
+              Schuman</a> (1886-1963), považovaný za zakladateľa myšlienky Európskej Únie, zohral kĺúčovú úlohu
+            pri podpise zmluvy, ktorá mala zabezpečiť aby sa zverstvá druhej svetovej vojny v Európe už
             neopakovali.</br>
             <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button>
           </p>
-          <p id="paragraph2" class="additional-content hidden"><a target="_blank" href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-paris">Zmluva</a> o riadení uhoľného a oceliarskeho 
+          <p id="paragraph2" class="additional-content hidden"><a target="_blank"
+              href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-paris">Zmluva</a>
+            o riadení uhoľného a oceliarskeho
             priemyslu mala zabezpečiť, aby nemohla žiadna krajina obrátiť svoje zbrane proti inej.
             Týmito šiestimi krajinami boli Nemecko, Francúzsko, Taliansko,
             Holandsko, Belgicko a Luxembursko.</br></p>
@@ -115,33 +118,40 @@
             hospodárske odvetvia.</br><button id="more_info"
               onclick="toggleContent('one_half', 'paragraph15', 'paragraph25')">viac</button>
           </p>
-          <p id="paragraph25" class="additional-content hidden">Formalizujú to podpisom dvoch zmlúv, 
-            ktorými sa zakladá <a target="_blank" href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-rome">Európske hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre
-            atómovú energiu (Euratom)</a>.</p>
+          <p id="paragraph25" class="additional-content hidden">Formalizujú to podpisom dvoch zmlúv,
+            ktorými sa zakladá <a target="_blank"
+              href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-rome">Európske
+              hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre
+              atómovú energiu (Euratom)</a>.</p>
         </div>
         <div class="trigger two" data-step="1">
-          <p>16 rokov po vzniku Európskeho Spoločenstva sa k šiestim zakladajúcim krajinám 
+          <p>16 rokov po vzniku Európskeho Spoločenstva sa k šiestim zakladajúcim krajinám
             pridávajú Dánsko, Írsko a Spojené Kraľovstvo.
           </p>
         </div>
         <div class="trigger three" data-step="2">
           <p id="paragraph3">
-            Občania si prvýkrát zvolili <a target="_blank" href="https://multimedia.europarl.europa.eu/en/topic/40-years-ago-first-session-of-the-directly-elected-european-parliament_12503">poslancov
-            Európskeho parlamentu</a>. Dovtedy menovali poslancov
+            Občania si prvýkrát zvolili <a target="_blank"
+              href="https://multimedia.europarl.europa.eu/en/topic/40-years-ago-first-session-of-the-directly-elected-european-parliament_12503">poslancov
+              Európskeho parlamentu</a>. Dovtedy menovali poslancov
             národné parlamenty.</br><button id="more_info"
               onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
           </p>
           <p id="paragraph4" class="additional-content hidden">
-            Poslanci sa združujú v celoeurópskych politických skupinách, nie v národných delegáciách.</br>
+            Prvé EuroVoľby mali účasť 61.99% a zo 410-tich zvolených poslancov
+            bolo 67 žien.</br>
           </p>
         </div>
         <div class="trigger four" data-step="3">
           <p id="paragraph5">
             K deviatim krajinám Európskeho spoločenstva sa v roku
             1981 pridalo Grécko, ktoré splnilo kritéria
-            keď sedem rokov pred tým zvrhlo <a target="_blank" href="https://www.europeana.eu/en/exhibitions/mass-media-and-propaganda-in-20th-century-europe/the-colonels-of-greece">vojenský režim</a> a
-            obnovilo <a target="_blank" href="http://news.bbc.co.uk/onthisday/hi/dates/stories/july/23/newsid_2515000/2515819.stm">demokraciu</a>.</br><button id="more_info"
-              onclick="toggleContent('four', 'paragraph5', 'paragraph6')">viac</button>
+            keď sedem rokov pred tým zvrhlo <a target="_blank"
+              href="https://www.europeana.eu/en/exhibitions/mass-media-and-propaganda-in-20th-century-europe/the-colonels-of-greece">vojenský
+              režim</a> a
+            obnovilo <a target="_blank"
+              href="http://news.bbc.co.uk/onthisday/hi/dates/stories/july/23/newsid_2515000/2515819.stm">demokraciu</a>.</br><button
+              id="more_info" onclick="toggleContent('four', 'paragraph5', 'paragraph6')">viac</button>
           </p>
           <p id="paragraph6" class="additional-content hidden">
             Pokračovalo aj napätie medzi Západom a Východom. USA a ZSSR sa
@@ -151,67 +161,89 @@
         </div>
         <div class="trigger five" data-step="4">
           <p>
-            V desiatich krajinách Európy sa konajú už druhé voľby do
-            Európskeho parlamentu. Svojich zástupcov a zástupkyne volí aj Grécko,
-            s celkovou účasťou 80.59%.
+            V desiatich krajinách Európy sa konajú už druhé EuroVoľby.
+            Celková účasť bola 58.98% a počet europoslancov sa zvýšil
+            na 518 (401 mužov a 81 žien.)
           </p>
         </div>
         <div class="trigger six" data-step="5">
           <p>
             Portugalsko a Španielsko zavŕšujú tzv. Stredomorské rozšírenie EÚ keď, podobne ako Grécko,
-            <a target="_blank" href="https://multimedia.europarl.europa.eu/en/video/history-the-mediterranean-enlargement-19811986_V001-0014">zavrhujú diktatúty</a> a volia si demokraciu. 
+            <a target="_blank"
+              href="https://multimedia.europarl.europa.eu/en/video/history-the-mediterranean-enlargement-19811986_V001-0014">zavrhujú
+              diktatúty</a> a volia si demokraciu.
             Budúcu Európsku úniu tak tvorí už 12 štátov v Európe.
           </p>
         </div>
         <div class="trigger seven" data-step="6">
           <p id="paragraph9">
-            Demokracia a sloboda si začínajú hľadať miesto aj v satelitoch
-            Sovietskeho Zväzu čo vedie k pádu Železnej Opony. Na druhej strane 
-            Európy sa v roku 1989 konajú už tretie EuroVoľby.</br>
+            V roku 1989 sa konajú tretie EuroVoľby s účasťou 58.41%.
+            Z 518 zvolených europoslancov je 370 mužov a 134 žien.</br>
             <button id="more_info" onclick="toggleContent('seven', 'paragraph9', 'paragraph10')">viac</button>
           </p>
           <p id="paragraph10" class="additional-content hidden">
-            Vtedajšie Československo sa vtedy aktívne zapojilo do boja za slobodu a demokraciu v Európe
-            keď v novembri 1989 vypulka Nežná revolúcia, ktorá priniesla pád
-            komunistického režimu. </br>
+            Demokracia a sloboda si začínajú hľadať miesto aj v satelitoch
+            Sovietskeho Zväzu čo vedie k pádu Železnej Opony. Vtedajšie Československo
+            sa aktívne zapojilo do boja za slobodu a demokraciu v Európe
+            keď v novembri 1989 vypukla <a target="_blank" href="https://interaktivne.sme.sk/1989">Nežná revolúcia</a>,
+            ktorá priniesla pád
+            komunistického režimu v Československu. </br>
           </p>
         </div>
+
         <div class="trigger seven_half" data-step="7">
           <p id="paragraph11">
-            Európska únia bola oficiálne založená Maastrichtskou zmluvou,
+            Európska únia ako ju poznáme dnes
+            bola oficiálne založená <a target="_blank"
+              href="https://www.consilium.europa.eu/en/maastricht-treaty/#:~:text=The%20Maastricht%20Treaty%20established%20the,profound%20impact%20on%20European%20integration.">Maastrichtskou
+              zmluvou</a>,
             ktorá vstúpila do platnosti 1. Novembra 1993.
           </p>
         </div>
+
         <div class="trigger eight" data-step="8">
           <p id="paragraph12">
-            Okrem volieb do Európskeho parlementu bola
-            na stole aj otázka rozšírenia EÚ na strednú a východnú Európu.
+            Vo štvrtých Eurovoľbách s celkovou účasťou 56.67% si občania
+            zvolili 367 europoslancov a 157 eruposlankýň.
           </p>
         </div>
+
         <div class="trigger nine" data-step="9">
           <p id="paragraph12">
-            Prvé rozšírenie už Európskej únie tvorilo Rakúsko, Fínsko a Švédsko.
+            K Európskemu spoločenstvu sa pridá vajú Rakúsko, Fínsko a Švédsko.
           </p>
         </div>
+
         <div class="trigger ten" data-step="10">
           <p id="paragraph13">
-            Okrem Eurovolieb sa v Únii zavádza euro. Zatiaľ však len pre
-            obchodné a finančné transakcie.</br>
+            Piate EuroVoľby sprevádza už podstatne nižšia účasť (49.51%).
+            Tri novopristúpené krajiny zvyšujú počet europoslancov na 626 a do europarlamentu
+            sa dostáva 339 mužov a 208 žien.</br>
             <button id="more_info" onclick="toggleContent('ten', 'paragraph13', 'paragraph14')">viac</button>
           </p>
           <p id="paragraph14" class="additional-content hidden">
-            Bankovky a mince budú zavedené neskôr.
+            Okrem Eurovolieb sa v Únii zavádza euro. Zatiaľ však len pre
+            obchodné a finančné transakcie. Bankovky a mince budú zavedené neskôr.
             Do eurozóny sa zapojí 11 krajín, no Dánsko, Švédsko a
             Spojené kráľovstvo sa rozhodnú počkať.</br>
           </p>
         </div>
+
         <div class="trigger eleven" data-step="11">
-          <p>
+          <p id="paragrapha">
+            V roku 2004 sa Slovensko pripája k Európskej Únii
+            a občania prvý raz hlasujú v Eurovoľbách, ktoré mali celkovú
+            účasť 45.47% a volených bolo 736 europoslancov (341 mužov 222 žien).</br>
+            <button id="more_info" onclick="toggleContent('eleven', 'paragrapha', 'paragraphb')">viac</button>
+          </p>
+          <p id="paragraphb" class="additional-content hidden">
             Rozdelenie Európy na východnú a západnú sa definitívne končí
-            rozšírením Európskej únie o 10 členských krajín
-            vrátane Slovenska. Išlo o historicky najväčšie rozšírenie Únie.
+            rozšírením Európskej únie o 10 členských krajín (Cyprus, Česko,
+            Esónsko, Litva, Lotyšsko, Maďarsko, Malta, Poľsko, Slovensko a Slovinsko).
+            Išlo o historicky najväčšie rozšírenie Únie.</br>
           </p>
         </div>
+
         <div class="trigger twelve" data-step="12">
           <p>
             Bulharsko a Rumunsko sa stávajú členskými štátmi Európskej
@@ -220,12 +252,20 @@
           </p>
         </div>
         <div class="trigger thirteen" data-step="13">
-          <p>
+          <p id="paragraph17">
+            V poradí siedme EuroVoľby, tentoraz s účasťou už dvadsiatich siedmych
+            krajín, majú opäť nižšiu účasť ako tie predošlé (42.97%). 736 zvolených
+            europoslancov tvorí 265 žien a 436 mužov.</br>
+            <button id="more_info" onclick="toggleContent('thirteen', 'paragraph17', 'paragraph18')">viac</button>
+          </p>
+          <p id="paragraph18" class="additional-content hidden">
             Po ratifikácii všetkými krajinami v decembri 2009 nadobúda
-            účinnosť Lisabonská zmluva, ktorá má nahradiť neúspešnú
+            účinnosť <a target="_blank"
+              href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-lisbon">Lisabonská
+              zmluva</a>, ktorá má nahradiť neúspešnú
             Zmluvu o Ústave pre Európu. Cieľom je urobiť EÚ demokratickejšou,
             transparentnejšou a efektívnejšou, aby sa vyrovnala s kliamtickými zmenami,
-            bezpečnosťou a udržateľným rozvojom.
+            bezpečnosťou a udržateľným rozvojom.</br>
           </p>
         </div>
         <div class="trigger fourteen" data-step="14">
@@ -235,29 +275,45 @@
           </p>
         </div>
         <div class="trigger fifteen" data-step="15">
-          <p>
-            Po vstupe Chorvátska z roku 2013 tvorí Európsku úniu už 28
-            členských krajín. Vzťahy Európskej únie s Ruskom ovplyvnilo
-            násilné odobratie Krymu Ukrajine Ruskom.
+          <p id="paragraph19">
+            163 551 013 miliónov voličov z 28 krajín si volí 751
+            zástupcov do Europarlamentu. V porovnaní s prvými EuroVoľbami, kde
+            ženy tvorili iba 16% europoslancov, ich pomer narastá na 40% (297).</br>
+            <button id="more_info" onclick="toggleContent('fifteen', 'paragraph19', 'paragraph20')">viac</button>
+          <p id="paragraph20" class="additional-content hidden">
+            Účasť na EuroVoľbách naďalej klesá (42.61%). Tento trend však zmenia
+            udalosti v Británii o dva roky neskôr.</br>
           </p>
         </div>
         <div class="trigger sixteen" data-step="16">
-          <p>
+          <p id="paragraph21">
             V roku 2016 občania Spojeného Kráľovstva rozhodli,
             že krajina vystúpi z Európskej Únie. Pomer hlasov
-            bol veľmi tesný: 51.89% za a 48.11% proti.
+            bol veľmi tesný: 51.89% za a 48.11% proti.</br>
+            <button id="more_info" onclick="toggleContent('sixteen', 'paragraph21', 'paragraph22')">viac</button>
+          </p>
+          <p id="paragraph22" class="additional-content hidden">
+            Brexit spôsobil obrovské <a target="_blank"
+              href="https://www.theguardian.com/uk-news/2019/oct/19/peoples-vote-march-hailed-as-one-of-greatest-protest-marches-in-british-history">protesty</a>
+            v celej Británii ale hlavne v Škótsku
+            a Severnom Írsku, ktoré hlasovali za zotrvanie v EÚ. Škótko sa dokonca dokonca pokúšalo
+            <a target="_blank" href="https://www.bbc.co.uk/news/uk-scotland-scotland-politics-43544163">vystúpiť</a> zo
+            Spojeného Kráľovstva a pripojiť sa späť k EÚ.</br>
           </p>
         </div>
         <div class="trigger seventeen" data-step="17">
           <p>
-            Prvé po-Brexitové voľby, v ktorých ešte hlasovali
-            občania Spojeného Kráľovstva ukázali vzostup záujmu
-            o Európsku Úniu a dianie v nej.
+            Brexit otriasol celou Európou a záujem 
+            občanov o budúcnosť EÚ výrazne vzrástol čo sa ukázalo
+            keď po prvý krát stúpla celková účasť na Eurovoľbách (50.66%).
           </p>
         </div>
         <div class="trigger eighteen" data-step="18" style="height: 700px;">
           <p>
-            Británia oficiálne vystupuje z Euópskej Únie.
+            Británia oficiálne vystupuje z Euópskej Únie ale ostáva pevným
+            zástancom demokracie a slobody v Európe. To sa ukáže najmä v roku 
+            2022 keď Rusko zaútočí na Ukrajinu a zomkne nielen Ukrajincov, ale aj
+            celú Európu. 
           </p>
         </div>
       </div>
@@ -266,7 +322,7 @@
 
     <div id="separator1" class="overview">
       <div id="ch1_div">
-        Pokracovanie nabuduce...
+        Pokračovanie nabudúce...
       </div>
     </div>
 
