timeline left, languages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div id="contentCapsule"></div>
   <div id="header">
-    <h1 id="title_header">Európske Voľby 2024</h1>
+    <h1 id="title_header">Voľby do Europarlamentu 2024</h1>
     <img id="peace_img" src="img/korup.png" alt="PeaceRep Logo" />
     <button title="Information" id="info_button"><i class="fa fa-info"></i></button>
   </div>
@@ -74,8 +74,8 @@
         vzniku, keď sa Európa spamätávala z druhej svetovej vojny,</br>
         nám EÚ poskytuje miesto na zdieľanie slobody, demokracie</br>
         a spájania sa v našej rozmanitosti.
-        <!-- <br><br><br>A ako sa to vyvíjalo? -->
       </div>
+      <div id="timeline_expl">Časová Os ↓ </div>
     </div>
 
     <div class="graphic">
@@ -193,17 +193,15 @@
 
         <div class="trigger seven_half" data-step="7">
           <p id="paragraph11">
-            Európska únia ako ju poznáme dnes
-            bola oficiálne založená <a target="_blank"
-              href="https://www.consilium.europa.eu/en/maastricht-treaty/#:~:text=The%20Maastricht%20Treaty%20established%20the,profound%20impact%20on%20European%20integration.">Maastrichtskou
-              zmluvou</a>,
-            ktorá vstúpila do platnosti 1. Novembra 1993.
+            Európska únia bola oficiálne založená <a target="_blank"
+            href="https://www.consilium.europa.eu/en/maastricht-treaty/#:~:text=The%20Maastricht%20Treaty%20established%20the,profound%20impact%20on%20European%20integration.">Maastrichtskou
+            zmluvou</a>, ktorá vstúpila do platnosti 1. Novembra 1993.
           </p>
         </div>
 
         <div class="trigger eight" data-step="8">
           <p id="paragraph12">
-            Vo štvrtých Eurovoľbách s celkovou účasťou 56.67% si občania
+            Volebná účasť dosahuje 56.67% a občania si
             zvolili 367 europoslancov a 157 eruposlankýň.
           </p>
         </div>
@@ -270,8 +268,8 @@
         </div>
         <div class="trigger fourteen" data-step="14">
           <p>
-            Chorvátsku sa podarilo naplniť prísnejšie prístupové rokovania,
-            ktoré stanovila Európska rada v decembri 2006 a vstupuje do Európskej únie.
+            Chorvátsko napĺňa prísnejšie prístupové podmienky 
+            stanovené Európskou radou a vstupuje do EÚ.
           </p>
         </div>
         <div class="trigger fifteen" data-step="15">
@@ -296,24 +294,23 @@
             Brexit spôsobil obrovské <a target="_blank"
               href="https://www.theguardian.com/uk-news/2019/oct/19/peoples-vote-march-hailed-as-one-of-greatest-protest-marches-in-british-history">protesty</a>
             v celej Británii ale hlavne v Škótsku
-            a Severnom Írsku, ktoré hlasovali za zotrvanie v EÚ. Škótko sa dokonca dokonca pokúšalo
+            a Severnom Írsku, ktoré hlasovali za zotrvanie v EÚ. Škótko sa dokonca pokúšalo
             <a target="_blank" href="https://www.bbc.co.uk/news/uk-scotland-scotland-politics-43544163">vystúpiť</a> zo
             Spojeného Kráľovstva a pripojiť sa späť k EÚ.</br>
           </p>
         </div>
         <div class="trigger seventeen" data-step="17">
           <p>
-            Brexit otriasol celou Európou a záujem 
-            občanov o budúcnosť EÚ výrazne vzrástol čo sa ukázalo
-            keď po prvý krát stúpla celková účasť na Eurovoľbách (50.66%).
+            Celková účasť vo voľbách prvý raz stúpa z predošlých
+            42.61% na 50.66%.
           </p>
         </div>
         <div class="trigger eighteen" data-step="18" style="height: 700px;">
           <p>
             Británia oficiálne vystupuje z Euópskej Únie ale ostáva pevným
-            zástancom demokracie a slobody v Európe. To sa ukáže najmä v roku 
+            zástancom demokracie a slobody v Európe. To sa ukáže najmä v roku
             2022 keď Rusko zaútočí na Ukrajinu a zomkne nielen Ukrajincov, ale aj
-            celú Európu. 
+            celú Európu.
           </p>
         </div>
       </div>
