--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       <div class="graphic__prose">
         <div class="trigger one" data-step="0">
           <p id="paragraph1"><a href="https://sk.wikipedia.org/wiki/Robert_Schuman" target="_blank">Robert
-              Schuman</a> (1886-1963), považovaný za zakladateľa myšlienky Európskej Únie, zohral kĺúčovú úlohu
-            pri podpise zmluvy, ktorá mala zabezpečiť aby sa zverstvá druhej svetovej vojny v Európe už
+              Schuman</a> (1886-1963) zohral kĺúčovú úlohu pri podpise zmluvy, 
+              ktorá mala zabezpečiť aby sa zverstvá druhej svetovej vojny v Európe už
             neopakovali.</br>
             <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button>
           </p>
@@ -307,7 +307,7 @@
         </div>
         <div class="trigger eighteen" data-step="18" style="height: 700px;">
           <p>
-            Británia oficiálne vystupuje z Euópskej Únie ale ostáva pevným
+            Británia oficiálne vystupuje z Európskej Únie ale ostáva pevným
             zástancom demokracie a slobody v Európe. To sa ukáže najmä v roku
             2022 keď Rusko zaútočí na Ukrajinu a zomkne nielen Ukrajincov, ale aj
             celú Európu.
