--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="trigger one" data-step="0">
           <p id="paragraph1"><a href="https://sk.wikipedia.org/wiki/Robert_Schuman" target="_blank">Robert
               Schuman</a> (1886-1963) zohral kĺúčovú úlohu pri podpise zmluvy, 
-              ktorá mala zabezpečiť aby sa zverstvá druhej svetovej vojny v Európe už
+              ktorá mala zabezpečiť, aby sa zverstvá druhej svetovej vojny v Európe už
             neopakovali.</br>
             <button id="more_info" onclick="toggleContent('one', 'paragraph1', 'paragraph2')">viac</button>
           </p>
@@ -109,7 +109,7 @@
               href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-paris">Zmluva</a>
             o riadení uhoľného a oceliarskeho
             priemyslu mala zabezpečiť, aby nemohla žiadna krajina obrátiť svoje zbrane proti inej.
-            Týmito šiestimi krajinami boli Nemecko, Francúzsko, Taliansko,
+            Týmito krajinami boli Nemecko, Francúzsko, Taliansko,
             Holandsko, Belgicko a Luxembursko.</br></p>
         </div>
         <div class="one_half">
@@ -125,8 +125,8 @@
               atómovú energiu (Euratom)</a>.</p>
         </div>
         <div class="trigger two" data-step="1">
-          <p>16 rokov po vzniku Európskeho Spoločenstva sa k šiestim zakladajúcim krajinám
-            pridávajú Dánsko, Írsko a Spojené Kraľovstvo.
+          <p>16 rokov po vzniku Európskeho spoločenstva sa k šiestim zakladajúcim krajinám
+            pridávajú Dánsko, Írsko a Spojené kráľovstvo.
           </p>
         </div>
         <div class="trigger three" data-step="2">
@@ -138,14 +138,14 @@
               onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
           </p>
           <p id="paragraph4" class="additional-content hidden">
-            Prvé EuroVoľby mali účasť 61.99% a zo 410-tich zvolených poslancov
+            Prvé Eurovoľby mali účasť 61.99% a zo 410-tich zvolených poslancov
             bolo 67 žien.</br>
           </p>
         </div>
         <div class="trigger four" data-step="3">
           <p id="paragraph5">
             K deviatim krajinám Európskeho spoločenstva sa v roku
-            1981 pridalo Grécko, ktoré splnilo kritéria
+            1981 pridalo Grécko, ktoré splnilo kritéria,
             keď sedem rokov pred tým zvrhlo <a target="_blank"
               href="https://www.europeana.eu/en/exhibitions/mass-media-and-propaganda-in-20th-century-europe/the-colonels-of-greece">vojenský
               režim</a> a
@@ -161,14 +161,14 @@
         </div>
         <div class="trigger five" data-step="4">
           <p>
-            V desiatich krajinách Európy sa konajú už druhé EuroVoľby.
+            V desiatich krajinách Európy sa konajú už druhé Eurovoľby.
             Celková účasť bola 58.98% a počet europoslancov sa zvýšil
             na 518 (401 mužov a 81 žien.)
           </p>
         </div>
         <div class="trigger six" data-step="5">
           <p>
-            Portugalsko a Španielsko zavŕšujú tzv. Stredomorské rozšírenie EÚ keď, podobne ako Grécko,
+            Portugalsko a Španielsko završujú tzv. Stredomorské rozšírenie EÚ, keď podobne ako Grécko
             <a target="_blank"
               href="https://multimedia.europarl.europa.eu/en/video/history-the-mediterranean-enlargement-19811986_V001-0014">zavrhujú
               diktatúty</a> a volia si demokraciu.
@@ -177,17 +177,17 @@
         </div>
         <div class="trigger seven" data-step="6">
           <p id="paragraph9">
-            V roku 1989 sa konajú tretie EuroVoľby s účasťou 58.41%.
+            V roku 1989 sa konajú tretie Eurovoľby s účasťou 58.41%.
             Z 518 zvolených europoslancov je 370 mužov a 134 žien.</br>
             <button id="more_info" onclick="toggleContent('seven', 'paragraph9', 'paragraph10')">viac</button>
           </p>
           <p id="paragraph10" class="additional-content hidden">
             Demokracia a sloboda si začínajú hľadať miesto aj v satelitoch
-            Sovietskeho Zväzu čo vedie k pádu Železnej Opony. Vtedajšie Československo
-            sa aktívne zapojilo do boja za slobodu a demokraciu v Európe
+            Sovietskeho zväzu, čo vedie k pádu Železnej opony. Vtedajšie Československo
+            sa aktívne zapojilo do boja za slobodu a demokraciu v Európe,
             keď v novembri 1989 vypukla <a target="_blank" href="https://interaktivne.sme.sk/1989">Nežná revolúcia</a>,
             ktorá priniesla pád
-            komunistického režimu v Československu. </br>
+            komunistického režimu v Československu.</br>
           </p>
         </div>
 
@@ -195,7 +195,7 @@
           <p id="paragraph11">
             Európska únia bola oficiálne založená <a target="_blank"
             href="https://www.consilium.europa.eu/en/maastricht-treaty/#:~:text=The%20Maastricht%20Treaty%20established%20the,profound%20impact%20on%20European%20integration.">Maastrichtskou
-            zmluvou</a>, ktorá vstúpila do platnosti 1. Novembra 1993.
+            zmluvou</a>, ktorá vstúpila do platnosti 1. novembra 1993.
           </p>
         </div>
 
@@ -208,19 +208,19 @@
 
         <div class="trigger nine" data-step="9">
           <p id="paragraph12">
-            K Európskemu spoločenstvu sa pridá vajú Rakúsko, Fínsko a Švédsko.
+            K Európskemu spoločenstvu sa pridávajú Rakúsko, Fínsko a Švédsko.
           </p>
         </div>
 
         <div class="trigger ten" data-step="10">
           <p id="paragraph13">
-            Piate EuroVoľby sprevádza už podstatne nižšia účasť (49.51%).
-            Tri novopristúpené krajiny zvyšujú počet europoslancov na 626 a do europarlamentu
+            Piate Eurovoľby sprevádza už podstatne nižšia účasť (49.51%).
+            Pristúpením troch nových krajín sa počet europoslancov zvyšuje na 626 a do europarlamentu
             sa dostáva 339 mužov a 208 žien.</br>
             <button id="more_info" onclick="toggleContent('ten', 'paragraph13', 'paragraph14')">viac</button>
           </p>
           <p id="paragraph14" class="additional-content hidden">
-            Okrem Eurovolieb sa v Únii zavádza euro. Zatiaľ však len pre
+            Okrem Eurovolieb sa v EÚ zavádza euro. Zatiaľ však len pre
             obchodné a finančné transakcie. Bankovky a mince budú zavedené neskôr.
             Do eurozóny sa zapojí 11 krajín, no Dánsko, Švédsko a
             Spojené kráľovstvo sa rozhodnú počkať.</br>
@@ -229,16 +229,16 @@
 
         <div class="trigger eleven" data-step="11">
           <p id="paragrapha">
-            V roku 2004 sa Slovensko pripája k Európskej Únii
+            V roku 2004 sa Slovensko pripája k Európskej únii
             a občania prvý raz hlasujú v Eurovoľbách, ktoré mali celkovú
             účasť 45.47% a volených bolo 736 europoslancov (341 mužov 222 žien).</br>
             <button id="more_info" onclick="toggleContent('eleven', 'paragrapha', 'paragraphb')">viac</button>
           </p>
           <p id="paragraphb" class="additional-content hidden">
             Rozdelenie Európy na východnú a západnú sa definitívne končí
-            rozšírením Európskej únie o 10 členských krajín (Cyprus, Česko,
-            Esónsko, Litva, Lotyšsko, Maďarsko, Malta, Poľsko, Slovensko a Slovinsko).
-            Išlo o historicky najväčšie rozšírenie Únie.</br>
+            rozšírením Európskej únie o 10 členských krajín: Cyprus, Česko,
+            Esónsko, Litva, Lotyšsko, Maďarsko, Malta, Poľsko, Slovensko a Slovinsko.
+            Išlo o historicky najväčšie rozšírenie únie.</br>
           </p>
         </div>
 
@@ -251,7 +251,7 @@
         </div>
         <div class="trigger thirteen" data-step="13">
           <p id="paragraph17">
-            V poradí siedme EuroVoľby, tentoraz s účasťou už dvadsiatich siedmych
+            V poradí siedme Eurovoľby, tentoraz s účasťou už dvadsiatich siedmych
             krajín, majú opäť nižšiu účasť ako tie predošlé (42.97%). 736 zvolených
             europoslancov tvorí 265 žien a 436 mužov.</br>
             <button id="more_info" onclick="toggleContent('thirteen', 'paragraph17', 'paragraph18')">viac</button>
@@ -275,7 +275,7 @@
         <div class="trigger fifteen" data-step="15">
           <p id="paragraph19">
             163 551 013 miliónov voličov z 28 krajín si volí 751
-            zástupcov do Europarlamentu. V porovnaní s prvými EuroVoľbami, kde
+            zástupcov do Europarlamentu. V porovnaní s prvými Eurovoľbami, kde
             ženy tvorili iba 16% europoslancov, ich pomer narastá na 40% (297).</br>
             <button id="more_info" onclick="toggleContent('fifteen', 'paragraph19', 'paragraph20')">viac</button>
           <p id="paragraph20" class="additional-content hidden">
@@ -285,8 +285,8 @@
         </div>
         <div class="trigger sixteen" data-step="16">
           <p id="paragraph21">
-            V roku 2016 občania Spojeného Kráľovstva rozhodli,
-            že krajina vystúpi z Európskej Únie. Pomer hlasov
+            V roku 2016 občania Spojeného kráľovstva rozhodli,
+            že krajina vystúpi z Európskej únie. Pomer hlasov
             bol veľmi tesný: 51.89% za a 48.11% proti.</br>
             <button id="more_info" onclick="toggleContent('sixteen', 'paragraph21', 'paragraph22')">viac</button>
           </p>
@@ -296,7 +296,7 @@
             v celej Británii ale hlavne v Škótsku
             a Severnom Írsku, ktoré hlasovali za zotrvanie v EÚ. Škótko sa dokonca pokúšalo
             <a target="_blank" href="https://www.bbc.co.uk/news/uk-scotland-scotland-politics-43544163">vystúpiť</a> zo
-            Spojeného Kráľovstva a pripojiť sa späť k EÚ.</br>
+            Spojeného kráľovstva a pripojiť sa späť k EÚ.</br>
           </p>
         </div>
         <div class="trigger seventeen" data-step="17">
@@ -307,9 +307,9 @@
         </div>
         <div class="trigger eighteen" data-step="18" style="height: 700px;">
           <p>
-            Británia oficiálne vystupuje z Európskej Únie ale ostáva pevným
+            Británia oficiálne vystupuje z Európskej únie, ale ostáva pevným
             zástancom demokracie a slobody v Európe. To sa ukáže najmä v roku
-            2022 keď Rusko zaútočí na Ukrajinu a zomkne nielen Ukrajincov, ale aj
+            2022, keď Rusko zaútočí na Ukrajinu a zomkne nielen Ukrajincov, ale aj
             celú Európu.
           </p>
         </div>
