--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             ktorými sa zakladá <a target="_blank"
               href="https://www.europarl.europa.eu/about-parliament/sk/in-the-past/the-parliament-and-the-treaties/treaty-of-rome">Európske
               hospodárske spoločenstvo (EHS) a Európske spoločenstvo pre
-              atómovú energiu (Euratom)</a>.</p>
+              atómovú energiu (Euratom)</a>.</br></p>
         </div>
         <div class="trigger two" data-step="1">
           <p>16 rokov po vzniku Európskeho spoločenstva sa k šiestim zakladajúcim krajinám
@@ -131,10 +131,10 @@
         </div>
         <div class="trigger three" data-step="2">
           <p id="paragraph3">
-            Občania si prvýkrát zvolili <a target="_blank"
+            Občania si prvýkrát volia <a target="_blank"
               href="https://multimedia.europarl.europa.eu/en/topic/40-years-ago-first-session-of-the-directly-elected-european-parliament_12503">poslancov
               Európskeho parlamentu</a>. Dovtedy menovali poslancov
-            národné parlamenty.</br><button id="more_info"
+              národné parlamenty.</br><button id="more_info"
               onclick="toggleContent('three', 'paragraph3', 'paragraph4')">viac</button>
           </p>
           <p id="paragraph4" class="additional-content hidden">
