highlight new countries

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       <div id="ch1_div">
         Pokračovanie nabudúce...</br>
         [Akékoľvek chyby, nápady, hocičo čo by sme mohli doplniť/zmeniť<br>
-        vo vizualizácii, s úsmevom pošli na mamjednurukudlouhou@gmail.com] 
+        vo vizualizácii, s úsmevom pošli na info@zastavmekorupciu.sk] 
       </div>
     </div>
 
