--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div id="contentCapsule"></div>
   <div id="header">
-    <h1 id="title_header">Voľby do Europarlamentu 2024</h1>
+    <!-- <h1 id="title_header">Voľby do Europarlamentu 2024</h1> -->
     <img id="peace_img" src="img/korup.png" alt="PeaceRep Logo" />
     <button title="Information" id="info_button"><i class="fa fa-info"></i></button>
   </div>
@@ -318,29 +318,29 @@
 
     <div id="separator1" class="overview">
       <div id="ch1_div">
+        Peniaze z Európskej únie 
+      </div>
+    </div>
+
+    <div class="graphic1">
+      <div class="graphic__vis__1">
+        <svg id="visualization1"></svg>
+      </div>
+      <div class="graphic__prose__1">
+        <p class="trigger nineteen" data-step="19" style="height: 600px; font-size: 20px;"></p>
+        <p class="trigger twenty" data-step="20" style="height: 600px; font-size: 20px;"></p>
+      </div>
+    </div>
+
+    <div id="separator2" class="overview">
+      <div id="ch2_div">
         Pokračovanie nabudúce...</br>
         [Akékoľvek chyby, nápady, hocičo čo by sme mohli doplniť/zmeniť<br>
         vo vizualizácii, s úsmevom pošli na info@zastavmekorupciu.sk] 
       </div>
     </div>
 
-    <!-- <div class="graphic1">
-      <div class="graphic__vis__1">
-        <svg id="visualization1"></svg>
-      </div>
-      <div class="graphic__prose__1">
-        <p class="trigger ten" data-step="9" style="height: 600px; font-size: 20px;">Text</p>
-        <p class="trigger eleven" data-step="10" style="height: 600px; font-size: 20px;">Text</p>
-      </div>
-    </div>
-
-    <div id="separator2" class="overview">
-      <div id="ch2_div">
-        Volnost Cestovania
-      </div>
-    </div>
-
-    <div class="graphic2">
+    <!-- <div class="graphic2">
       <div class="graphic__vis__2">
         <svg id="visualization2">
           <g id="basemap2"></g>
